# PhisicsExperiment

./: .gitignore  README.md  main.py  pyproject.toml
Experiment1/phy1011/: Elastic_Modulus.py  Elastic_Modulus_empty.docx  Preview.docx  data.xlsx  k.hs
Experiment1/phy1021/: Preview.docx  thermology.py  thermology_empty.docx
Experiment1/phy1022/: Preview.docx  data.xlsx  heatConductivity.py  heatConductivity_empty.docx
Experiment1/phy1031/: Oscillograph.py  Oscillograph_empty.docx  Oscillograph_out.docx  data.xlsx
Experiment1/phy1041/: RMeasure.py  RMeasure_empty.docx  RMeasure_out.docx  data.xlsx
Experiment1/phy1042/: Kelvinbridge.py  Kelvinbridge_empty.docx
Experiment1/phy1051/: Potentiometer.py  Potentiometer_empty.docx  data.xlsx
Experiment1/phy1061/: Preview.docx  f_measure.py  f_measure_empty.docx
Experiment1/phy1062/: Parallel.py  Parallel_empty.docx  Preview.docx
Experiment1/phy1071/: Preview.docx  Spectrometer.py  Spectrometer_empty.docx  Spectrometer_out.docx  data.xlsx
Experiment1/phy1081/: Laser.py  Laser_empty.docx  Preview.docx
Experiment1/phy1082/: 1082.py  1082Rreport.docx  1082empty.docx  Preview.docx  Sodium.py  Sodium_empty.docx  Sodium_out.docx  data.xlsx
Experiment1/phy1091/: Michelson.py  NewtonRing.py  data.xlsx
Experiment2/SolarBattery/: SolarBattery.py  SolarBattery_empty.docx  in.xlsx  数据.xlsx
Experiment2/phy2061/: Photoelectric.py  Photoelectric_empty.docx  Preview 2.docx  data.xlsx
Experiment2/phy2071/: Microwave.py  Microwave_empty.docx  Preview.docx  data.xlsx
GeneralMethod/: PyCalcLib.py  Report.py
(+14 files in other folders)
