[tool.poetry]
name = "physicsexperiment"
version = "2.0.0"
description = ""
authors = ["猫猫 <overflowcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
xlrd = "1.2.0"
sympy = "^1.11.1"
scipy = "^1.9.3"
pywin32 = "^305"
pandas = "^1.5.2"
xlwt = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
